--- a/composer.json
+++ b/composer.json
@@ -10,12 +10,13 @@
     "repositories": [
         {
             "type": "vcs",
-            "url": "https://github.com/antonio150/upload-image-bundle.git"
+            "url": "https://github.com/antonio150/UploadImageBundle.git"
         }
     ],
     "require": {
         "php": ">=8.1",
-        "symfony/framework-bundle": "^7.0"
+        "symfony/framework-bundle": "^7.0",
+        "antonio150/UploadImageBundle": "dev-main"
     },
     "minimum-stability": "dev",
     "prefer-stable": true
