--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     ],
     "require": {
         "php": ">=8.1",
-        "symfony/framework-bundle": "^7.0",
+        "symfony/framework-bundle": "^5.0 || ^6.0 || ^7.0",
         "antonio150/UploadImageBundle": "dev-main"
     },
     "minimum-stability": "main",
