--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     "require": {
         "php": ">=8.1",
         "symfony/framework-bundle": "^5.0 || ^6.0 || ^7.0",
-        "antonio150/uploadimagebundle": "dev-main"
+        "antonio150/uploadimagebundle": "dev"
     },
     "minimum-stability": "dev",
     "prefer-stable": true
