--- a/resources/config/services.yaml
+++ b/resources/config/services.yaml
@@ -2,5 +2,6 @@ services:
     UploadImageBundle\Service\ImageUploader:
         arguments:
             $uploadDir: '%kernel.project_dir%/public/uploads'
+            $publicPath: '/uploads'
 
   
